# SKALA_MCP_Server_Test

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
src/: __init__.py  server.py
src/config/: __init__.py  patterns.py  tools_config.py
src/services/: __init__.py  node_recommender.py  prompt_analyzer.py  workflow_optimizer.py
src/utils/: __init__.py  helpers.py
