[project]
name = "agent-builder-mcp"
version = "1.0.0"
description = "Agent 흐름과 노드를 자동 추천하는 MCP 서버"
authors = [{name = "Developer", email = "dev@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"